# airos4_msgs

./: CMakeLists.txt  package.xml
msg/: Accelerometer.msg  Battery.msg  Touch.msg
srv/: CheckGrammar.srv  GetHeartColor.srv  GetList.srv  GetListAudio.srv  GetMouth.srv  GetServoPos.srv  HeartBeat.srv  HeartFlashColor.srv  MouthDraw.srv  MouthDrawImageFile.srv  MouthPrint.srv  MoveBotmobile.srv  MoveService.srv  MoveServo.srv  MoveServoRelative.srv  Perform.srv  Play.srv  PlayRandom.srv  Say.srv  SetBool.srv  SetColor.srv  SetFloat.srv  SetPerformance.srv  SetString.srv  Stop.srv
