<?xml version="1.0"?>
<package>
  <name>airos4_msgs</name>
  <version>0.1.0</version>
  <description>Package containing all msgs and srvs used by Aisoy nodes</description>
  <maintainer email="pgarcia@aisoy.com">Pablo Garcia</maintainer>
  <license>BSD</license>
	<url type="website">http://www.aisoy.com</url>
  <author email="pgarcia@aisoy.com">Pablo Garcia</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>



